Implement Home View

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-	padding-top: 60px;
+	padding-top: 80px;
 }
 
 section {
@@ -39,6 +39,18 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
 	line-height: 1;
+}
+
+a:link{
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
 }
 
 h1 {
