--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,17 @@
 <div class="center jumbotron">
-	<h1>Welcome to the Sample App</h1>
+	<h1 > <a href="/" target="_blank">GAPP </a></h1>
 	<h2>
-	  This is the home page for the
-	  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-	  sample application.
+	  Grupo Científico de Anatomía Patológica del Perú
 	</h2>
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+	
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
+<div class="description">
+	<p>
+		El Grupo científico de Anatomía Patológica del Perú es una organización de médicos Anatomo
+		Patólogos que tienen como finalidad apoyar la investigación y estudios de Anatomía Patológica , 
+		valorando la innovación en la especialidad, promoviendo los trabajos científicos a nivel de 
+		Hospitales y universidades, incorporando en su ámbito asistencial que forma parte de la medicina 
+		personalizada, y con el tiempo procurando elevar el nivel profesional.
+	</p>
+</div>
+
