Delete header and footer

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-	<h1 > <a href="/" target="_blank">GAPP </a></h1>
+	<h1 > <a href="help" target="_blank">GAPP </a></h1>
 	<h2>
 	  Grupo Científico de Anatomía Patológica del Perú
 	</h2>
