--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,31 @@
-<div class="center jumbotron">
+<body>
+<div class="row">
+	<div class="col-1">
+		<p class="desc">
+			"La primera aplicación para realizar tus traslados"
+		</p>
+	</div>
 	
-	
+</div>
+
+
+
+</body>
+
+<div class="body-bkgr">
+	prueba de vista 1
+</div>
+
+<div class="body-bkgr">
+	prueba de vista 2
+</div>
+
+<div class="body-bkgr">
+	prueba de vista 3
+</div>
+
+<div class="body-bkgr">
+	prueba de vista 4
 </div>
 
 
