change image format and add header

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,15 @@
 <body>
 <div class="row">
 	<div class="col-1">
-		<p class="desc">
-			"La primera aplicación para realizar tus traslados"
-		</p>
+		
 	</div>
 	
 </div>
 
-
-
 </body>
 
 <div class="body-bkgr">
+	<%= render 'layouts/header' %>
 	prueba de vista 1
 </div>
 
