--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,9 +17,7 @@ html {
 
 body {
 	padding-top: 80px;
-  background-image: image-url('sunset.jpg');
-  background-size: 100%;
-  background-repeat: no-repeat;
+
 }
 
 .row {
@@ -28,7 +26,11 @@ body {
   
 }
 .col-1{
-  width: 50%;
+  width: 100%;
+  background-image: image-url('sunset.jpg');
+  background-size: 100%;
+  height:100vh;
+
 }
 
 .desc{
@@ -38,7 +40,7 @@ body {
 .body-bkgr{
   background-color:#ebebe0;
   background-size: 100%;
-  height:100%;
+  height:100vh;
 
 }
 
