Change header color and add link function

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-inverse" style="background-color:white;">
   <div class="container">
     <%= link_to "MOVIVAN", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "¿Qué es Movivan?", root_path %></li>
-        <li><%= link_to "¿Cómo funciona?", help_path %></li>
-        <li><%= link_to "Beneficios", help_path %></li>
-        <li><%= link_to "Contáctanos", help_path %></li>
-        <li><%= link_to "Ingresa", help_path %></li>
-        <li><%= link_to "Registra tu van", help_path %></li>
+        <li><%= link_to "¿Qué es Movivan?", "#about" %></li>
+        <li><%= link_to "¿Cómo funciona?", "#how" %></li>
+        <li><%= link_to "Beneficios", "#benefic" %></li>
+        <li><%= link_to "Contáctanos", "#contact" %></li>
+        <li><%= link_to "Ingresa", "#login" %></li>
+        <li><%= link_to "Registra tu van", "#register" %></li>
       </ul>
     </nav>
   </div>
