--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,20 +8,20 @@
 
 </body>
 
-<div class="body-bkgr">
+<div class="body-bkgr" id="about">
 	<%= render 'layouts/header' %>
 	prueba de vista 1
 </div>
 
-<div class="body-bkgr">
+<div class="body-bkgr" id="how">
 	prueba de vista 2
 </div>
 
-<div class="body-bkgr">
+<div class="body-bkgr" id="benefic">
 	prueba de vista 3
 </div>
 
-<div class="body-bkgr">
+<div class="body-bkgr" id="contact">
 	prueba de vista 4
 </div>
 
