--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -78,6 +78,11 @@ a:visited {
     text-decoration: none;
 }
 
+.navbar-inverse .navbar-nav > li >a:hover{
+  color: #777;
+}
+
+
 h1 {
 	font-size: 3em;
 	letter-spacing: -2px;
@@ -106,13 +111,13 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: white;
+  color: #777;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: white;
+    color: #777;
     text-decoration: none;
   }
 }
