Add landing images

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,21 +8,40 @@
 
 </body>
 
-<div class="body-bkgr" id="about">
-	<%= render 'layouts/header' %>
-	prueba de vista 1
+<div  id="about">
+	<div class="row">
+		<%= render 'layouts/header' %>
+		<div class="about-bkgr"> 
+
+		</div>
+
+
+	</div>
+
+	
 </div>
 
-<div class="body-bkgr" id="how">
-	prueba de vista 2
+<div id="how">
+	<div class="row">
+		<div class="how-bkgr">
+		</div>
+	</div>
 </div>
 
-<div class="body-bkgr" id="benefic">
-	prueba de vista 3
+<div id="benefic">
+	<div class="row">
+		<div class="ben-bkgr">
+		</div>
+	</div>
+	
 </div>
 
-<div class="body-bkgr" id="contact">
-	prueba de vista 4
+<div id="contact">
+	<div class="row">
+		<div class="cont-bkgr">
+		</div>
+	</div>
+
 </div>
 
 
