--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,15 +33,33 @@ body {
 
 }
 
+
 .desc{
   color: white;
 }
 
-.body-bkgr{
+.about-bkgr{
+  width:50%;
+  background-image: image-url('about.png');
   background-color:#ebebe0;
   background-size: 100%;
   height:100vh;
 
+}
+
+.how-bkgr{
+  width:50%;
+  background-image: image-url('how.png');
+  background-color:#ebebe0;
+  background-size: 100%;
+  height:100vh;
+}
+.ben-bkgr{
+  
+}
+
+.cont-bkgr{
+  
 }
 
 section {
