--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,21 +16,21 @@ html {
 }
 
 body {
-	padding-top: 80px;
-
+	padding-top: 0px;
+  padding-left: 0px;
+  width: 5-vw;
 }
 
 .row {
-  width: 100%;
+  width: 100vw;
   display:flex;
   
 }
 .col-1{
-  width: 100%;
+  width: 100vw;
   background-image: image-url('sunset.jpg');
-  background-size: 100%;
+  background-size: 100% 100%;
   height:100vh;
-
 }
 
 
