--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,7 +18,7 @@ html {
 body {
 	padding-top: 0px;
   padding-left: 0px;
-  width: 5-vw;
+  width: 50vw;
 }
 
 .row {
@@ -26,7 +26,7 @@ body {
   display:flex;
   
 }
-.col-1{
+.abc {
   width: 100vw;
   background-image: image-url('sunset.jpg');
   background-size: 100% 100%;
