Implement benefits view

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,8 +8,8 @@
 
 </body>
 
-<div  id="about">
-	<div class="row">
+<div id="about">
+	<div class="row main">
 		<%= render 'layouts/header' %>
 		<div class="about-bkgr"> 
 
@@ -22,18 +22,20 @@
 </div>
 
 <div id="how">
-	<div class="row">
+	<div class="row main">
 		<div class="how-bkgr">
 		</div>
 	</div>
 </div>
 
 <div id="benefic">
-	<div class="row">
-		<div class="ben-bkgr">
+	<div class="row main">
+		<div class="benefits"> 
+			<div class="ben-bkgr">
+			</div>
 		</div>
+
 	</div>
-	
 </div>
 
 <div id="contact">
