--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,9 +26,16 @@ body {
   display:flex;
   
 }
+
+.main {
+  background-image: image-url('gradient.png');
+  width: 100vw;
+  background-size: 100% 100%;
+}
+
 .abc {
   width: 100vw;
-  background-image: image-url('sunset.jpg');
+  background-image: image-url('sunset.png');
   background-size: 100% 100%;
   height:100vh;
 }
@@ -54,9 +61,29 @@ body {
   background-size: 100%;
   height:100vh;
 }
+
+/* Benefits */
+
 .ben-bkgr{
-  
+  background-image: image-url('benefits.png');
+  background-size: 100% 100%;
+  width: 80vw; /* 90% of viewport vidth */
+    height: 30vw; /* ratio = 9/16 * 90 = 50.625  0.38* 90*/
+  max-height: 80vh;
+    max-width: 208vh; /* 16/9 * 90 = 160  2.60 * 90 */
+    margin: auto;
+    position: absolute;
+    top:0;bottom:0;
+    left:0;right:0;
 }
+
+.benefits {
+  position: relative;
+  height:100vh;
+  width: 100vw;
+}
+
+/* Contact */
 
 .cont-bkgr{
   
