Add test video and change header style

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Sans" />
+
 <body>
 <div class="row">
 	<div class="abc">
-		
+		<video width="320" height="240" controls class="fullscreen-bg__video">
+			<%= video_tag "videoprueba.mp4", :size => "320x240", :controls => true %>
+		</video>
 	</div>
 	
 </div>
