--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,11 +33,37 @@ body {
   background-size: 100% 100%;
 }
 
+.li-head{
+  
+  font-family: Josefin Sans;
+  font-style: normal;
+  font-variant: normal;
+}
+
+.but-head{
+  padding: 10px 10px;
+  border-radius: 24px;   
+  font-family: Josefin Sans;
+  font-style: normal;
+  font-variant: normal;
+  background-color: black;
+  border: 0;
+  width: 140px;
+}
+
 .abc {
   width: 100vw;
-  background-image: image-url('sunset.png');
+  
   background-size: 100% 100%;
   height:100vh;
+}
+
+.fullscreen-bg__video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -125,6 +151,21 @@ a:visited {
 
 .navbar-inverse .navbar-nav > li >a:hover{
   color: #777;
+
+}
+
+.navbar-inverse .navbar-nav > li{
+  padding: 2px;
+  width: 165px;
+  display:inline-block;
+  font-size:17px;
+}
+
+.navbar ul{
+  text-align: center;
+  padding: 0px;
+  zoom:1;
+  overflow: hidden;
 }
 
 
