--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-<header class="navbar navbar-fixed-top navbar-inverse" style="background-color:white;">
+<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" style="background-color:#ebebe0;">
   <div class="container">
     <%= link_to "MOVIVAN", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "¿Qué es Movivan?", "#about" %></li>
-        <li><%= link_to "¿Cómo funciona?", "#how" %></li>
-        <li><%= link_to "Beneficios", "#benefic" %></li>
-        <li><%= link_to "Contáctanos", "#contact" %></li>
-        <li><%= link_to "Ingresa", "#login" %></li>
-        <li><%= link_to "Registra tu van", "#register" %></li>
+        <li class="li-head"><%= link_to "¿Qué es Movivan?", "#about" %></li>
+        <li class="li-head"><%= link_to "¿Cómo funciona?", "#how" %></li>
+        <li class="li-head"><%= link_to "Beneficios", "#benefic" %></li>
+        <li class="li-head"><%= link_to "Contáctanos", "#contact" %></li>
+        <li class="but-head"><%= link_to "Ingresa", "#login" %></li>
+        <li class="but-head"><%= link_to "Registra tu van", "#register" %></li>
       </ul>
     </nav>
   </div>
