Add video and change header style

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" style="background-color:#ebebe0;">
+<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" id="land-head" style="background-color:#ebebe0;display:none;">
   <div class="container">
-    <%= link_to "MOVIVAN", root_path, id: "logo" %>
+    <%= link_to "Movivan", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li class="li-head"><%= link_to "¿Qué es Movivan?", "#about" %></li>
