Change link color for differents links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,12 +3,12 @@
     <%= link_to "Movivan", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li class="li-head"><%= link_to "¿Qué es Movivan?", "#about" %></li>
-        <li class="li-head"><%= link_to "¿Cómo funciona?", "#how" %></li>
-        <li class="li-head"><%= link_to "Beneficios", "#benefic" %></li>
+        <li class="li-head"><%= link_to "¿Qué es Movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#ff0066'; document.getElementById('sign').style.backgroundColor = '#ff0066'"  %></li>
+        <li class="li-head"><%= link_to "¿Cómo funciona?", "#how", :onclick => "document.getElementById('login').style.backgroundColor = '#660066'; document.getElementById('sign').style.backgroundColor = '#660066'" %></li>
+        <li class="li-head"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0000cc'; document.getElementById('sign').style.backgroundColor = '#0000cc'" %></li>
         <li class="li-head"><%= link_to "Contáctanos", "#contact" %></li>
-        <li class="but-head"><%= link_to "Ingresa", "#login" %></li>
-        <li class="but-head"><%= link_to "Registra tu van", "#register" %></li>
+        <li class="but-head" id="login"><%= link_to "Ingresa", "#login" %></li>
+        <li class="but-head" id="sign"><%= link_to "Registra tu van", "#register" %></li>
       </ul>
     </nav>
   </div>
