--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,12 +41,13 @@ body {
 }
 
 .but-head{
-  padding: 10px 10px;
+  padding: 0;
   border-radius: 24px;   
   font-family: Josefin Sans;
   font-style: normal;
   font-variant: normal;
-  background-color: black;
+  color:white;
+  background-color: #ff0066;
   border: 0;
   width: 140px;
 }
@@ -77,6 +78,7 @@ body {
   background-color:#ebebe0;
   background-size: 100%;
   height:100vh;
+
 
 }
 
@@ -158,6 +160,7 @@ a:visited {
   padding: 2px;
   width: 165px;
   display:inline-block;
+
   font-size:17px;
 }
 
