--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,17 +16,40 @@
 		</div>
 
 
-	</div>
-
-	
+	</div>	
 </div>
 
 <div id="how">
 	<div class="row main">
 		<div class="how-bkgr">
 		</div>
+		<div>
+			hola
+		</div>
 	</div>
 </div>
+
+<div id="how1">
+	<div class="row main">
+		<div class="how1-bkgr">
+		</div>
+	</div>
+</div>
+
+<div id="how2">
+	<div class="row main">
+		<div class="how2-bkgr">
+		</div>
+	</div>
+</div>
+
+<div id="how3">
+	<div class="row main">
+		<div class="how3-bkgr">
+		</div>
+	</div>
+</div>
+
 
 <div id="benefic">
 	<div class="row main">
