--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,31 +19,52 @@
 
 <div id="how">
 	<div class="row main">
-		<div class="how-bkgr">
+		<div class="how-main" >
+			<div class="how-bkgr">
+			</div>
 		</div>
-		<div>
-			hola
-		</div>
-	</div>
-</div>
-
-<div id="how1">
-	<div class="row main">
-		<div class="how1-bkgr">
+		<div class="how-text">
+			<h1>1. Viaje</h1>
+			<h2>Selecciona tus rutas de ida y vuelta segun tus viajes.</h2>
 		</div>
 	</div>
 </div>
 
-<div id="how2">
+<div id="how">
 	<div class="row main">
-		<div class="how2-bkgr">
+		<div class="how-main" >
+			<div class="how1-bkgr">
+			</div>
+		</div>
+		<div class="how-text">
+			<h1>2. Programación</h1>
+			<h2>Selecciona los dias en que viajaremos contigo.</h2>
 		</div>
 	</div>
 </div>
 
-<div id="how3">
+<div id="how">
 	<div class="row main">
-		<div class="how3-bkgr">
+		<div class="how-main" >
+			<div class="how2-bkgr">
+			</div>
+		</div>
+		<div class="how-text">
+			<h1>3. Confirmación</h1>
+			<h2>Espera la confirmación de tus viajes programados.</h2>
+		</div>
+	</div>
+</div>
+
+<div id="how">
+	<div class="row main">
+		<div class="how-main" >
+			<div class="how3-bkgr">
+			</div>
+		</div>
+		<div class="how-text">
+			<h1>4. Mis viajes</h1>
+			<h2>Disfruta de tus viajes confirmados.</h2>
 		</div>
 	</div>
 </div>
