--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,8 @@ body {
   background-image: image-url('gradient.png');
   width: 100vw;
   background-size: 100% 100%;
+  height: 100vh;
+  position: relative;
 }
 
 .li-head{
@@ -75,19 +77,85 @@ body {
 .about-bkgr{
   width:50%;
   background-image: image-url('about.png');
-  background-color:#ebebe0;
-  background-size: 100%;
-  height:100vh;
+  background-size: 100% 100%;
+}
 
+/* How it works */
 
+.how-main {
+  width:50%;
+  height:100%;
+  position: relative;
 }
 
 .how-bkgr{
-  width:50%;
+  width: 45vw;
   background-image: image-url('how.png');
-  background-color:#ebebe0;
-  background-size: 100%;
-  height:100vh;
+  background-size: 100% 100%;
+  height: 80vh;
+  max-height: 90vw;
+  max-width: 45vh;
+  margin:auto;
+  position: absolute;
+  top:0;bottom:0;
+  left:0;right:0;
+}
+
+.how1-bkgr{
+  width: 45vw;
+  background-image: image-url('how1.png');
+  background-size: 100% 100%;
+  height: 80vh;
+  max-height: 90vw;
+  max-width: 45vh;
+  margin:auto;
+  position: absolute;
+  top:0;bottom:0;
+  left:0;right:0;
+}
+
+.how2-bkgr{
+  width: 45vw;
+  background-image: image-url('how2.png');
+  background-size: 100% 100%;
+  height: 80vh;
+  max-height: 90vw;
+  max-width: 45vh;
+  margin:auto;
+  position: absolute;
+  top:0;bottom:0;
+  left:0;right:0;
+}
+
+.how3-bkgr{
+  width: 45vw;
+  background-image: image-url('how3.png');
+  background-size: 100% 100%;
+  height: 80vh;
+  max-height: 90vw;
+  max-width: 45vh;
+  margin:auto;
+  position: absolute;
+  top:0;bottom:0;
+  left:0;right:0;
+}
+
+.how-text {
+  vertical-align: middle;
+  height: 150px;
+  width: 300px;
+  margin:auto;
+  h1 {
+    color:#693B7A;
+    text-align: left;
+    font-size: 2.3em;
+  }
+  h2 {
+    color:#693B7A;
+    margin-top: -15px;
+    text-align: left;
+    font-size: 1.4em;
+  }
 }
 
 /* Benefits */
