--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,13 @@
 <div id="about">
 	<div class="row main">
 		<%= render 'layouts/header' %>
-		<div class="about-bkgr" style="margin-top:75px;"> 
+		<div class="how-main" style="margin-top:75px;">
+			<div class="about-bkgr">
+			</div>
+		</div>
+		<div class="how-main" >
+			<div class="about-text">
+			</div>
 		</div>
 	</div>
 </div>
