--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,9 +75,30 @@ body {
 }
 
 .about-bkgr{
-  width:50%;
+  width:80vw;
   background-image: image-url('about.png');
   background-size: 100% 100%;
+    height: 80vh;
+  max-height: 90vw;
+  max-width: 90vh;
+  margin:auto 0;
+  position: absolute;
+  top:0;bottom:0;
+  left:0;right:0;
+}
+
+.about-text {
+    width:68vw;
+  background-image: image-url('about_text.png');
+  background-size: 100% 100%;
+    height: 51vh;
+  max-width: 78vh;
+  max-height: 59vw;
+  
+  margin:auto;
+  position: absolute;
+  top:0;bottom:0;
+  left:0;right:0;
 }
 
 /* How it works */
