--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -86,12 +86,11 @@
 	</div>
 </div>
 
-<div id="contact">
-	<div class="row">
-		<div class="cont-bkgr">
-		</div>
+<div class="contact">
+	<div class="cont-bkgr">
 	</div>
-
+	<div class="cont-form" >abajo</div>
+	</div>
 </div>
 
 <script >
