--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -161,6 +161,7 @@ body {
   left:0;right:0;
 }
 
+
 .how-text {
   vertical-align: middle;
   height: 150px;
@@ -173,10 +174,10 @@ body {
   }
   h2 {
     color:#693B7A;
-    margin-top: -15px;
+    margin-top: -20px;
     text-align: left;
-    font-size: 1.4em;
-  }
+    font-size: 1.4em; 
+    }
 }
 
 /* Benefits */
@@ -202,8 +203,33 @@ body {
 
 /* Contact */
 
+.contact {
+  background-image: image-url('gradient.png');
+  width: 100vw;
+  background-size: 100% 100%;
+  height: 100vh;
+  position: relative;
+  margin-left: -15px;
+}
+
 .cont-bkgr{
-  
+  width: 100vw;
+  height: 60vh;
+  background-color: clear;
+  margin: auto;
+    top:0;bottom:0;
+    left:0;right:0;
+}
+
+.cont-form {
+  background-image: image-url('contact-us-banner.jpg');
+  background-size: 100% 100%;
+  width: 100vw;
+  height: 40vh;
+  background-color:black;
+  margin: auto;
+    top:0;bottom:0;
+    left:0;right:0;
 }
 
 section {
