--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -89,7 +89,10 @@
 <div class="contact">
 	<div class="cont-bkgr">
 	</div>
-	<div class="cont-form" >abajo</div>
+	<div class="cont-form" >
+		<div class="cont-input"><%= render '/contacts/form' %></div>
+		
+	</div>
 	</div>
 </div>
 
