--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -222,15 +222,27 @@ body {
 }
 
 .cont-form {
-  background-image: image-url('contact-us-banner.jpg');
   background-size: 100% 100%;
   width: 100vw;
   height: 35vh;
-  background-color:black;
+  background-color:$gray-light;;
   margin: auto;
     top:0;bottom:0;
     left:0;right:0;
 }
+
+.cont-label {
+  h1 {
+    color: white;
+    text-align: center;
+    font-size: 1.5em;
+  }
+}
+
+.cont-input {
+  margin-top: 20px;
+}
+
 
 section {
 	overflow: auto;
