Cjange video prop

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <body>
 <div class="row">
 	<div class="abc">
-		<%= video_tag "videoprueba.ogg" , :autoplay => true , :loop => true%>
+		<%= video_tag "videoprueba.ogg" , :autoplay => true, :muted => true%>
 	</div>
 </div>
 
