--- a/app/views/contact_mailer/get_contact.html.erb
+++ b/app/views/contact_mailer/get_contact.html.erb
@@ -1,1 +1,7 @@
-Hola
+Datos del Contacto:
+<br></br><br></br>
+Nombre: <%=@contact.name%>
+<br></br>
+Correo: <%=@contact.email%>
+<br></br>
+Teléfono: <%=@contact.phone%>
