--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -88,10 +88,10 @@
 
 <div class="contact">
 	<div class="cont-bkgr">
+		<div class="cont-text"></div>
 	</div>
 	<div class="cont-form" >
 		<div class="cont-input"><%= render '/contacts/form' %></div>
-		
 	</div>
 	</div>
 </div>
