--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -230,7 +230,7 @@ body {
     height: 30%; /* ratio = 9/16 * 90 = 50.625  0.38* 90*/
   max-height: 50%;
     max-width: 200%; /* 16/9 * 90 = 160  2.60 * 90 */
-    margin: auto;
+    margin-top: 350px;
     position: absolute;
     top:0;bottom:0;
     left:0;right:0;
