--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,14 +55,23 @@ body {
 }
 
 .abc {
-  width: 100vw;
-  
-  background-size: 100% 100%;
-  height:100vh;
+
+  display: block;  
+  right: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: 100wh;   
+  height: auto;  
+  z-index: 1;
+  margin: 0 auto;
+  object-fit: cover;
+  padding: 0;
+    
 }
 
 .fullscreen-bg__video{
-  position: absolute;
+  
   top: 0;
   left: 0;
   width: 100%;
