--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "animate";
 
 $gray-medium-light: #eaeaea;
 
@@ -28,7 +29,7 @@ body {
 }
 
 .main {
-  background-image: image-url('gradient.png');
+  background: -webkit-linear-gradient(top, rgba(229,225,222,1) 0%, rgba(255,255,255,1) 100%);
   width: 100vw;
   background-size: 100% 100%;
   height: 100vh;
@@ -108,6 +109,14 @@ body {
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
+}
+
+.edit-button {
+  background-color: clear;
+}
+
+.segment {
+  width: 100vw;
 }
 
 /* How it works */
@@ -489,3 +498,14 @@ input {
   width: auto;
   margin-left: 0;
 }
+
+.fullpage {
+  width: 100%;
+}
+
+
+  .save {
+   color: #00DD00;
+   font-size: 16px;
+   font-weight: bold;
+  }
