--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -30,8 +30,8 @@
    </div>
 
   <div class="form-group">
-    <div class="col-md-4 col-md-offset-4 edit-link">
-      <%= submit_tag("Enviar", disable_with: "Guardando", class: "btn btn-default edit-button")%>
+    <div class="col-md-4 col-md-offset-4 ">
+      <%= submit_tag("Enviar", disable_with: "Guardando", class: "btn btn-link save")%>
   </div>
 
   <div class="form-group col-md-4 col-md-offset-4 share">
