--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,7 +56,7 @@ body {
 }
 
 .abc {
-  background-color:black;
+  background-color:$gray;
   display: block;  
   right: 0; 
   bottom: 0;
@@ -257,9 +257,9 @@ body {
 .cont-form {
   background-size: 100% 100%;
   width: 100vw;
-  height: 35vh;
+  height: 38vh;
   background-color:$gray;
-  margin-top: 0px;
+  margin-bottom: 0px;
     top:0;bottom:0;
     left:0;right:0;
 }
