--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -259,7 +259,7 @@ body {
   width: 100vw;
   height: 38vh;
   background-color:$gray;
-  margin-bottom: 0px;
+  margin-top: 0px;
     top:0;bottom:0;
     left:0;right:0;
 }
