--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,8 +60,6 @@ body {
   display: block;  
   right: 0; 
   bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
   width: 100wh;   
   height: 100vh;  
   z-index: 1;
@@ -259,7 +257,7 @@ body {
   width: 100vw;
   height: 38vh;
   background-color:$gray;
-  margin-top: 0px;
+  margin: auto;
     top:0;bottom:0;
     left:0;right:0;
 }
