--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -85,7 +85,8 @@
 	</div>
 </div>
 
-<div class="contact section">
+<div class="section">
+<div class="contact">
 	<div class="cont-bkgr">
 		<div class="cont-text"></div>
 	</div>
@@ -93,6 +94,7 @@
 		<div class="cont-input"><%= render '/contacts/form' %></div>
 	</div>
 	</div>
+
 </div>
 
 </div>
