--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,7 +60,11 @@ body {
   display: block;  
   right: 0; 
   bottom: 0;
-  width: 100wh;   
+  max-height:200vh;
+  max-width:200vw;
+  min-width:100vw;
+  min-height:100vh;
+  width: 100vw;   
   height: 100vh;  
   z-index: 1;
   margin: 0 auto;
