--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row section">
 	<div class="abc">
-		<%= video_tag "videoprueba.ogg" , :autoplay => true, :muted => true, class:"fullscreen-bg__video" %>
+		<%= video_tag "videolanding.ogv" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
 	</div>
 </div>
 
