--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -131,7 +131,7 @@ body {
 
 .how-bkgr{
   width: 45vw;
-  background-image: image-url('how.png');
+  background-image: image-url('iPhone.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
@@ -144,7 +144,7 @@ body {
 
 .how1-bkgr{
   width: 45vw;
-  background-image: image-url('how1.png');
+  background-image: image-url('iPhone.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
@@ -157,7 +157,7 @@ body {
 
 .how2-bkgr{
   width: 45vw;
-  background-image: image-url('how2.png');
+  background-image: image-url('iPhone.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
@@ -170,7 +170,7 @@ body {
 
 .how3-bkgr{
   width: 45vw;
-  background-image: image-url('how3.png');
+  background-image: image-url('iPhone.png');
   background-size: 100% 100%;
   height: 80vh;
   max-height: 90vw;
