Add animated image on video

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,8 @@
 <div class="row section">
 	<div class="abc">
 		<%= video_tag "videolanding.ogv" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
+		<%= image_tag("logoMovivan.gif", alt: "Imagen de noticia",:class => "img-main bar fadeInUp")%>
+
 	</div>
 </div>
 
