--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -78,9 +78,19 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  height: 100vh;
+  opacity: 0.5;
 }
 
+.img-main{
+  margin:auto;
+  position:absolute;
+
+  left:0;
+  right:0;
+  opacity:0.5;
+  
+}
 
 .desc{
   color: white;
