--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,7 +38,7 @@ body {
 
 .li-head{
   
-  font-family: Josefin Sans;
+  font-family: Caviar Dreams;
   font-style: normal;
   font-variant: normal;
 }
@@ -46,7 +46,7 @@ body {
 .but-head{
   padding: 0;
   border-radius: 24px;   
-  font-family: Josefin Sans;
+  font-family: Caviar Dreams;
   font-style: normal;
   font-variant: normal;
   color:white;
@@ -78,17 +78,17 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: auto;
   opacity: 0.5;
 }
 
 .img-main{
-  margin:auto;
-  position:absolute;
-
+  margin-top:-70%;
+  margin-left:12%;
+  opacity:0.5;
   left:0;
   right:0;
-  opacity:0.5;
+
   
 }
 
