Change link font

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,7 +38,7 @@ body {
 
 .li-head{
   
-  font-family: Caviar Dreams;
+  font-family: Josefin Sans;
   font-style: normal;
   font-variant: normal;
 }
@@ -46,7 +46,7 @@ body {
 .but-head{
   padding: 0;
   border-radius: 24px;   
-  font-family: Caviar Dreams;
+  font-family: Josefin Sans;
   font-style: normal;
   font-variant: normal;
   color:white;
