--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,7 +14,7 @@ $gray-medium-light: #eaeaea;
 
 @font-face {
   font-family: 'CaviarDreams';
-  src: url('CaviarDreams.ttf') format('truetype');
+  src: font-url('CaviarDreams.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
