--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -209,6 +209,7 @@ body {
     text-align: left;
     font-size: 2.4em;
     font-family: 'CaviarDreams';
+    font-weight: bolder;
   }
   h2 {
     color:#693B7A;
