Change video style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -77,9 +77,11 @@ body {
   
   top: 0;
   left: 0;
-  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
   height: auto;
-  opacity: 0.5;
+  z-index: -100;
 }
 
 .img-main{
