--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
       <li class="li-head">
-        <%= link_to image_tag("logoMovivan.png", alt: "Imagen del Curso", size:"120x19") %>
+        <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"120x19") %>
       </li>
        <li class="li-head">
           <%= link_to "¿Qué es movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#ff0066'; document.getElementById('sign').style.backgroundColor = '#ff0066'" %>
