--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
         <li class="li-head"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0000cc'; document.getElementById('sign').style.backgroundColor = '#0000cc'" %></li>
         <li class="li-head"><%= link_to "Contáctanos", "#contact" %></li>
         <li class="but-head" id="login"><%= link_to "Ingresa", "http://www.movivan.pe/auth/login" %></li>
-        <li class="but-head" id="sign"><%= link_to "Registra tu van", "#register" %></li>
+        <li class="but-head" id="sign"><%= link_to "Registra tu van", '/postulation'%></li>
       </ul>
     </nav>
   </div>
