--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -535,3 +535,9 @@ input {
    font-size: 16px;
    font-weight: bold;
   }
+
+  .postulation-button {
+    background-color: #0074E7;
+    color: white;
+    font-family: 'CaviarDreams';
+  }
