--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Van') %>
+<% provide(:title, 'van') %>
 <h1>Contact</h1>
 <p>
   Contact the Ruby on Rails Tutorial about the sample app at the
