--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,21 @@ body {
   width: 140px;
 }
 
+.reg-but{
+  border-radius: 24px;   
+  font-family: 'CaviarDreams';
+  font-style: normal;
+  font-variant: normal;
+  text-align:center;
+  color:white;
+  background-color:white;
+  border: 0;
+  width: 140px;
+  margin-top:-28%;
+  margin-left:50%;
+  
+}
+
 .abc {
   background-color:black;
   display: block;  
@@ -100,12 +115,26 @@ body {
 }
 
 .img-main{
-  margin-top:-70%;
-  
-  
-  left:0;
-  right:0;
- 
+  margin-top:-85%;
+  margin-left:50%;
+  opacity:0.5;
+}
+
+.img-name{
+ margin-top:-75%;
+  margin-left:50%; 
+  opacity:0.5;
+}
+
+.page-slogan{
+position:absolute;
+    color:white;
+    font-size:18px;
+    font-family:'CaviarDreams'; 
+    text-align:center;
+ margin-top:-65%;
+  margin-left:41%; 
+  opacity:0.5; 
 }
 
 .desc{
