--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -1,6 +1,10 @@
-<% provide(:title, 'van') %>
-<h1>Contact</h1>
-<p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/#contact">contact page</a>.
-</p>
+<% provide(:title, 'Registra tu Van') %>
+<div class="how section">
+	<div class="row main">
+		<div class="first-section" >
+		</div>
+		<div class="second-section">
+			<div class="post-form"><%= render '/postulations/form' %></div>
+		</div>
+	</div>
+</div>
