--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -545,8 +545,66 @@ input {
    font-weight: bold;
   }
 
+  .send {
+   color: white;
+   background-color:#0074E7;
+   font-family: 'CaviarDreams';
+   margin-top:15px;
+  }
+
+  .navbarpost {
+   background-color: #F8F8F8;
+  }
+
   .postulation-button {
     background-color: #0074E7;
     color: white;
     font-family: 'CaviarDreams';
   }
+
+  .first-section {
+    width:70%;
+    height:100%;
+    position: relative;
+    background-image: image-url('postulation.png');
+    background-size: 100% 100%;
+  }
+
+  .second-section {
+    width:30%;
+    height:100%;
+    position: relative;
+      padding-top:40px;
+    background-color: $gray
+  }
+
+  .post-form {
+    margin-top: 60px;
+
+    margin-right:20px;
+    margin-left:20px;
+    h1 {
+      color: white;
+      font-family: 'CaviarDreams';
+      font-size: 20px;
+      text-align:center;
+    }
+    h2 {
+      color: white;
+      font-family: 'CaviarDreams';
+      font-size: 16px;
+      text-align:left;
+    }
+  }
+
+
+.radio-label {
+    color: white;
+      font-family: 'CaviarDreams';
+      font-size: 14px;
+      text-align:left;
+  display: inline-block;
+}
+
+
+
