--- a/app/views/layouts/_postulationheader.html.erb
+++ b/app/views/layouts/_postulationheader.html.erb
@@ -1,7 +1,7 @@
-<header class="navbar navbar-fixed-top">
+<header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
-    <a class="navbar-brand" href="#">
-    <%= image_tag("logo1.png", alt: "Imagen del Curso", size:"120x24") %>
+    <a class="navbar-brand" href=<%=root_path %>>
+    <%= image_tag("logo.png", alt: "Imagen del Curso", size:"120x24") %>
       </a>
     <nav>
       <ul class="nav navbar-nav navbar-right">
