--- a/app/views/postulations/_form.html.erb
+++ b/app/views/postulations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@postulation) do |f| %>
+<%= form_for(@postulation == nil ? (@postulation = Postulation.new ) : @postulation) do |f| %>
   <% if @postulation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@postulation.errors.count, "error") %> prohibited this postulation from being saved:</h2>
@@ -11,27 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+<div class="form-group  post-form">
+  <h1>¿Quieres pertenecer a la Comunidad de conductores Movivan?</h1>
+  <h2>Llena este formulario y nos pondremos en contacto contigo:</h2>
+  <div class="">
+    <%= f.text_field :name, :placeholder => "nombre", class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+  <div class="">
+    <%= f.text_field :lastName, :placeholder => "apellido", class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :lastName %><br>
-    <%= f.text_field :lastName %>
+  <div class="">
+    <%= f.text_field :email, :placeholder => "correo", class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
+  <div class="">
+    <%= f.text_field :phone, :placeholder => "celular", class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :owner %><br>
-    <%= f.check_box :owner %>
+  <div >
+      <%= f.radio_button :owner , :checked => true , :value => false%>
+      <%= label :owner, "Soy conductor propietario." , class: 'radio-label'%>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div >
+       <%= f.radio_button :owner, :value => true%>
+       <%= label :owner, "Tengo conductores a cargo.", class: 'radio-label'%>
+  </div>
+
+  <div class="form-group">
+    <div class="">
+      <%= submit_tag("Enviar Solicitud", disable_with: "Enviando", class: "btn btn-edit send")%>
+  </div>
   </div>
 <% end %>
