--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -630,4 +630,24 @@ input {
   }
 
 
+.radio-label {
+    color: white;
+      font-family: 'CaviarDreams';
+      font-size: 14px;
+      text-align:left;
+      display:block;
+}
+
+.post-radio {
+  align:center;
+}
+
+label{
+  display:block;
+     color: white;
+      font-family: 'CaviarDreams';
+      font-size: 14px;
+      text-align:left;
+      margin-top: 5px;
+}
 
