--- a/app/views/postulations/_form.html.erb
+++ b/app/views/postulations/_form.html.erb
@@ -26,13 +26,11 @@
   <div class="">
     <%= f.text_field :phone, :placeholder => "celular", class: "form-control" %>
   </div>
-  <div >
-      <%= f.radio_button :owner , :checked => true , :value => false%>
-      <%= label :owner, "Soy conductor propietario." , class: 'radio-label'%>
+  <div class="radio">
+      <label class="radio-label"><%= f.radio_button :owner , :checked => true , :value => false%> Soy conductor propietario.<label>
   </div>
-  <div >
-       <%= f.radio_button :owner, :value => true%>
-       <%= label :owner, "Tengo conductores a cargo.", class: 'radio-label'%>
+  <div class="radio">
+       <label class="radio-label"><%= f.radio_button :owner, :value => true%> Tengo conductores a cargo.</label>
   </div>
 
   <div class="form-group">
