--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -638,16 +638,8 @@ input {
       display:block;
 }
 
-.post-radio {
-  align:center;
-}
-
-label{
-  display:block;
-     color: white;
-      font-family: 'CaviarDreams';
-      font-size: 14px;
-      text-align:left;
-      margin-top: 5px;
+.radio-post {
+  float: none;
+margin: 0 auto;
 }
 
