--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,5 +1,4 @@
 
-<h2 class="separator">Contacto</h2> 
 <%= form_for(@contact == nil ? (@contact = Contact.new ) : @contact) do |f| %>
   <% if @contact.errors.any? %>
     <div id="error_explanation">
@@ -17,22 +16,21 @@
    <h1>Escríbenos y con gusto nos contactaremos contigo en la brevedad.</h1>
  </div>
 
-  <div class="form-group">
-     <div class="col-lg-4">
+  <div class="form-group contact-inputs">
+     <div class="contact-row">
        <%= f.text_field :name, :placeholder => "nombre", class: "form-control" %>
      </div>
-     <div class="col-lg-4">
+     <div class="contact-row">
        <%= f.text_field :email, :placeholder => "correo", class: "form-control" %>
      </div>
-     <div class="col-lg-4">
+     <div class="contact-row">
        <%= f.text_field :phone, :placeholder => "celular", class: "form-control" %>
      </div>
+     <div class="contact-button">
+      <%= submit_tag("Enviar", disable_with: "Guardando", class: "btn btn-link save")%>
+    </div>
    </div>
 
-  <div class="form-group">
-    <div class="col-md-4 col-md-offset-4 ">
-      <%= submit_tag("Enviar", disable_with: "Guardando", class: "btn btn-link save")%>
-  </div>
 
   <div class="form-group col-md-4 col-md-offset-4 share">
     <h2>Síguenos en <%= link_to image_tag("fb.png", alt: "Compartir en Facebook"),
