--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <div class="fullpage-home">
 
 <div class="row section">
-	<div class="abc">
+	<div class="abc" id="video">
 		<%= video_tag "videolanding.ogv" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
 		<%= image_tag("lam.png", alt: "Imagen de noticia",:class => "img-main bar fadeInUp", size:"160x110")%>
 		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"160x45")%>
@@ -12,7 +12,7 @@
 			la mejor experiencia con seguridad y confort.
 		</p>
 		<li class="reg-but bar fadeInUp">
-			<%= link_to "Regístrate aquí", "#register" %>
+			<%= link_to "Regístrate aquí", '/postulation' %>
 		</li>
     	
 	</div>
@@ -112,6 +112,7 @@
 <script >
 		function yscroll(){
 			var pagetop = document.getElementById("land-head");
+			
 			var ypos = window.pageYOffset;
 			if(ypos > screen.height - 200){
 				pagetop.style.display = "inherit";
