--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -301,6 +301,7 @@ position:absolute;
 }
 
 .cont-text {
+margin-top:200px;
     background-image: image-url('contact_text.png');
   background-size: 100% 100%;
   width: 100%; /* 90% of viewport vidth */
@@ -323,7 +324,7 @@ position:absolute;
 }
 
 .cont-label {
-padding-top:12px;
+padding-top:10px;
   h1 {
     color: white;
     text-align: center;
