Change header animation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,10 +50,11 @@ body {
   font-style: normal;
   font-variant: normal;
   font-size:15px;
+  font-weight:bold;
 }
 
 .but-head{
-  padding: 0;
+  padding: 10px 21px;
   border-radius: 24px;   
   font-family: 'CaviarDreams';
   font-style: normal;
@@ -62,6 +63,16 @@ body {
   background-color: #ff0066;
   border: 0;
   width: 140px;
+  right:8px;
+  height:40px;
+  margin-top:5px;
+
+  a:link{
+    margin-top:-6px;
+
+  }
+
+
 }
 
 .reg-but{
@@ -421,6 +432,10 @@ a:visited {
   display:inline-block;
 
   font-size:15px;
+}
+.navbar-inverse .navbar-nav > li >a:link{
+  color:white;
+  
 }
 
 .navbar ul{
