--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -623,7 +623,7 @@ input {
     width:70%;
     height:100%;
     position: relative;
-    background-image: image-url('postulation.png');
+    background-image: image-url('postulation.jpg');
     background-size: 100% 100%;
   }
 
