--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -8,3 +8,12 @@
 		</div>
 	</div>
 </div>
+<div class="how section">
+	<div class="row main">
+		<div class="first-section" >
+		</div>
+		<div class="second-section">
+			<div class="post-form"><%= render '/postulations/form' %></div>
+		</div>
+	</div>
+</div>
