Change home page style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,29 +71,34 @@ body {
     margin-top:-6px;
 
   }
-
-
 }
 
 .reg-but{
+  padding: 10px 21px;
   border-radius: 24px;   
   font-family: 'CaviarDreams';
   font-style: normal;
   font-variant: normal;
   text-align:center;
   color:white;
-  background-color:white;
+  background-color:#660066;
   border: 0;
   width: 180px;
-  margin-top:-25%;
+  margin-top:-21%;
   left: 0;
   right: 0;
   margin-right: auto;
   margin-left: auto;
-  font-size:16px;
+  font-size:24px;
   opacity:0.8;
+  list-style:none;
+  height:55px;
   a:hover{
-    color:gray;
+    color:white;
+  }
+  a:link{
+    margin-top:-6px;
+    color:white;
   }
 }
 
@@ -162,13 +167,27 @@ body {
   font-size:18px;
   font-family:'CaviarDreams'; 
   text-align:center;
-  margin-top:-30%;
+  margin-top:-29%;
   
   opacity:0.7; 
   left: 0;
   right: 0;
   margin-right: auto;
   margin-left: auto;
+}
+.mov-slogan{
+  position:absolute;
+  color:white;
+  font-size:24px;
+  font-family:'CaviarDreams'; 
+  text-align:center;
+  margin-top:-24%;
+  opacity:0.7; 
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  
 }
 
 .desc{
@@ -420,6 +439,10 @@ a:visited {
     color: black;
     background-color: transparent;
     text-decoration: none;
+}
+
+.navbar-inverse{
+  border:0px;
 }
 
 .navbar-inverse .navbar-nav > li >a:hover{
