--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
 
-
-<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" id="land-head" style="background-color:#ebebe0;display:none;">
+<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" id="land-head" style="background-color:transparent;display:none;">
   <div class="container">
     <nav>
       <ul class="nav navbar-nav navbar-right">
