--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,10 +6,14 @@
 	<div class="abc" id="video">
 		<%= video_tag "videolanding.ogv" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
 		<%= image_tag("lam.png", alt: "Imagen de noticia",:class => "img-main bar fadeInUp", size:"160x110")%>
-		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"160x45")%>
+		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"220x45")%>
 		<p class="page-slogan bar fadeInUp">
 			Tu viaje cotidiano convertido en <br>
 			la mejor experiencia con seguridad y confort.
+		</p>
+
+		<p class="mov-slogan bar fadeInUp">
+			Déjate llevar
 		</p>
 		<li class="reg-but bar fadeInUp">
 			<%= link_to "Regístrate aquí", '/postulation' %>
